--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -40,10 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
-    <Compile Include="Models\ModelRenderer.cs" />
+    <Compile Include="GraphicsException.cs" />
+    <Compile Include="Models\Mesh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Shaders\ShaderCompileErrorException.cs" />
+    <Compile Include="Shaders\ShaderException.cs" />
     <Compile Include="Shaders\ShaderProgram.cs" />
     <Compile Include="Textures\CubeTexture.cs" />
     <Compile Include="Textures\Texture.cs" />
