--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,28 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="GraphicsException.cs" />
+    <Compile Include="Gui\Events\MouseEvents.cs" />
+    <Compile Include="Gui\Fonts\BMFont.cs" />
+    <Compile Include="Gui\Fonts\Font.cs" />
+    <Compile Include="Gui\Fonts\FontManager.cs" />
+    <Compile Include="Gui\Fonts\Glyph.cs" />
+    <Compile Include="Gui\Fonts\GPUGlyph.cs" />
+    <Compile Include="Gui\Fonts\TextAlignment.cs" />
+    <Compile Include="Gui\Fonts\TextSettings.cs" />
+    <Compile Include="Gui\GuiRenderer.cs" />
+    <Compile Include="Gui\GuiRoot.cs" />
+    <Compile Include="Gui\GuiSettings.cs" />
+    <Compile Include="Gui\GuiText.cs" />
+    <Compile Include="Gui\GuiTextureRegion.cs" />
+    <Compile Include="Gui\GuiVertex.cs" />
+    <Compile Include="Gui\Widgets\Image.cs" />
+    <Compile Include="Gui\Widgets\Label.cs" />
+    <Compile Include="Gui\Widgets\Widget.cs" />
+    <Compile Include="Gui\Widgets\WidgetGroup.cs" />
+    <Compile Include="Input\AccurateMouse.cs" />
+    <Compile Include="Input\IKeyboardInputProvider.cs" />
+    <Compile Include="Input\IMouseInputProvider.cs" />
+    <Compile Include="Input\Keyboard.cs" />
     <Compile Include="Models\Mesh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
@@ -52,11 +75,33 @@
     <Compile Include="Shaders\ShaderCompileErrorException.cs" />
     <Compile Include="Shaders\ShaderException.cs" />
     <Compile Include="Shaders\ShaderProgram.cs" />
+    <Compile Include="Sprites\Sprite.cs" />
+    <Compile Include="Sprites\SpriteAtlas.cs" />
     <Compile Include="Textures\CubeTexture.cs" />
     <Compile Include="Textures\Texture.cs" />
     <Compile Include="Textures\TextureArray.cs" />
+    <Compile Include="Textures\TextureManager.cs" />
+    <Compile Include="Textures\TextureMeta.cs" />
+    <Compile Include="Textures\TextureQuality.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Input\RealTimeMouse.cs" />
+    <Compile Include="Utilities\BoundingBox.cs" />
+    <Compile Include="Utilities\BoundingFrustum.cs" />
+    <Compile Include="Utilities\BoundingSphere.cs" />
     <Compile Include="Utilities\BufferObject.cs" />
+    <Compile Include="Utilities\ContainmentType.cs" />
+    <Compile Include="Utilities\FrameBuffer.cs" />
+    <Compile Include="Utilities\GLThreadHelper.cs" />
+    <Compile Include="Utilities\IBounder.cs" />
+    <Compile Include="Utilities\MathHelper.cs" />
+    <Compile Include="Utilities\Plane.cs" />
+    <Compile Include="Utilities\PlaneIntersectionType.cs" />
+    <Compile Include="Utilities\Ray.cs" />
     <Compile Include="Utilities\SkyRenderer.cs" />
+    <Compile Include="Utilities\Time.cs" />
+    <Compile Include="Utilities\XML.cs" />
+    <Compile Include="Utilities\XMLReader.cs" />
+    <Compile Include="Utilities\XMLWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenTK\Source\OpenTK\OpenTK.csproj">
@@ -65,7 +110,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Primitives\" />
+    <Folder Include="Utilities\Metrics\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
