--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Gui\Events\MouseEvents.cs" />
     <Compile Include="Gui\Fonts\BMFont.cs" />
     <Compile Include="Gui\Fonts\Font.cs" />
+    <Compile Include="Gui\Fonts\FontCollection.cs" />
+    <Compile Include="Gui\Fonts\FontInfo.cs" />
     <Compile Include="Gui\Fonts\FontManager.cs" />
     <Compile Include="Gui\Fonts\Glyph.cs" />
     <Compile Include="Gui\Fonts\GPUGlyph.cs" />
@@ -60,6 +62,10 @@
     <Compile Include="Gui\GuiText.cs" />
     <Compile Include="Gui\GuiTextureRegion.cs" />
     <Compile Include="Gui\GuiVertex.cs" />
+    <Compile Include="Gui\Widgets\Button.cs" />
+    <Compile Include="Gui\Widgets\Button.Rendering.cs">
+      <DependentUpon>Button.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gui\Widgets\Image.cs" />
     <Compile Include="Gui\Widgets\Label.cs" />
     <Compile Include="Gui\Widgets\Widget.cs" />
@@ -72,8 +78,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
     <Compile Include="Shaders\Shader.cs" />
+    <Compile Include="Shaders\ShaderCollection.cs" />
     <Compile Include="Shaders\ShaderCompileErrorException.cs" />
     <Compile Include="Shaders\ShaderException.cs" />
+    <Compile Include="Shaders\ShaderInfo.cs" />
+    <Compile Include="Shaders\ShaderManager.cs" />
     <Compile Include="Shaders\ShaderProgram.cs" />
     <Compile Include="Sprites\Sprite.cs" />
     <Compile Include="Sprites\SpriteAtlas.cs" />
@@ -92,6 +101,7 @@
     <Compile Include="Utilities\ContainmentType.cs" />
     <Compile Include="Utilities\FrameBuffer.cs" />
     <Compile Include="Utilities\GLThreadHelper.cs" />
+    <Compile Include="Utilities\GPUCapabilities.cs" />
     <Compile Include="Utilities\IBounder.cs" />
     <Compile Include="Utilities\MathHelper.cs" />
     <Compile Include="Utilities\Plane.cs" />
@@ -113,6 +123,9 @@
     <Folder Include="Utilities\Metrics\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gui\Widgets\Button.InputHandling.cs">
+      <DependentUpon>Button.cs</DependentUpon>
+    </Compile>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
