--- a/HatzapTestApplication/HatzapTestApplication.csproj
+++ b/HatzapTestApplication/HatzapTestApplication.csproj
@@ -110,6 +110,9 @@
     <Content Include="Assets\Textures\sh3.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Textures\sh3_n.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\Textures\sh3_s.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
