Added visibility flag to widgets. If widget is not visible, it is completely skipped in update and Render. Fixed a bug where setting Z would not set the widget in a dirty state.

--- a/HatzapTestApplication/HatzapTestApplication.csproj
+++ b/HatzapTestApplication/HatzapTestApplication.csproj
@@ -59,6 +59,9 @@
     <None Include="Assets\Shaders\Model.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\Shaders\ModelColored.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\Shaders\Sky.frag" />
     <None Include="Assets\Shaders\Sky.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
