--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -46,6 +46,9 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="GraphicsException.cs" />
+    <Compile Include="Gui\Anchors\Anchor.cs" />
+    <Compile Include="Gui\Anchors\AnchorDirection.cs" />
+    <Compile Include="Gui\Anchors\AnchorType.cs" />
     <Compile Include="Gui\Elements\GuiElement.cs" />
     <Compile Include="Gui\Elements\GuiElementCollection.cs" />
     <Compile Include="Gui\Events\MouseEvents.cs" />
