--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -71,8 +71,10 @@
     <Compile Include="Gui\Widgets\Button.Rendering.cs">
       <DependentUpon>Button.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gui\Widgets\GridContainer.cs" />
     <Compile Include="Gui\Widgets\Image.cs" />
     <Compile Include="Gui\Widgets\Label.cs" />
+    <Compile Include="Gui\Widgets\StackContainer.cs" />
     <Compile Include="Gui\Widgets\Widget.cs" />
     <Compile Include="Gui\Widgets\WidgetGroup.cs" />
     <Compile Include="Input\AccurateMouse.cs" />
