New feature: GuiRoot.Root.MouseHoverGui returns true if mouse is currently over any gui element. Note: returns true even with widgets that are not actually drawn. Does not return true if mouse hovers hidden elements.

--- a/HatzapTestApplication/HatzapTestApplication.csproj
+++ b/HatzapTestApplication/HatzapTestApplication.csproj
@@ -62,6 +62,12 @@
     <None Include="Assets\Shaders\ModelColored.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\Shaders\SimpleModel.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Assets\Shaders\SimpleModel.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\Shaders\Sky.frag" />
     <None Include="Assets\Shaders\Sky.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
