--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Gui\Widgets\GridContainer.cs" />
     <Compile Include="Gui\Widgets\Image.cs" />
     <Compile Include="Gui\Widgets\Label.cs" />
+    <Compile Include="Gui\Widgets\Panel.cs" />
     <Compile Include="Gui\Widgets\StackContainer.cs" />
     <Compile Include="Gui\Widgets\Widget.cs" />
     <Compile Include="Gui\Widgets\WidgetGroup.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Utilities\Plane.cs" />
     <Compile Include="Utilities\PlaneIntersectionType.cs" />
     <Compile Include="Utilities\Ray.cs" />
+    <Compile Include="Utilities\ScreenFiller.cs" />
     <Compile Include="Utilities\SkyRenderer.cs" />
     <Compile Include="Utilities\Time.cs" />
     <Compile Include="Utilities\XML.cs" />
