--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Hatzap Editor\packages.config" />
   <repository path="..\Hatzap\packages.config" />
   <repository path="..\HatzapTestApplication\packages.config" />
 </repositories>
