Texture pipeline is now somewhat there. There are still bugs with mipmaps and compression, so they are disabled for now.

--- a/Hatzap/Hatzap.csproj
+++ b/Hatzap/Hatzap.csproj
@@ -122,16 +122,10 @@
     <Compile Include="Shaders\ShaderInfo.cs" />
     <Compile Include="Shaders\ShaderManager.cs" />
     <Compile Include="Shaders\ShaderProgram.cs" />
-    <Compile Include="Sprites\ISpriteRenderQueueAlgorithm.cs" />
     <Compile Include="Sprites\Sprite.cs" />
     <Compile Include="Sprites\SpriteAtlas.cs" />
-    <Compile Include="Sprites\SpriteCollection.cs" />
-    <Compile Include="Sprites\SpritePaintBatch.cs" />
-    <Compile Include="Sprites\SpritePainterAlgorithm.cs" />
-    <Compile Include="Sprites\SpritePaintQueue.cs" />
     <Compile Include="Sprites\SpriteRenderData.cs" />
-    <Compile Include="Sprites\SpriteRenderQueue.cs" />
-    <Compile Include="Sprites\SpriteVertex.cs" />
+    <Compile Include="Sprites\SpriteBatch.cs" />
     <Compile Include="Textures\CubeTexture.cs" />
     <Compile Include="Textures\Texture.cs" />
     <Compile Include="Textures\TextureArray.cs" />
