--- a/Hatzap Editor/packages.config
+++ b/Hatzap Editor/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="3.3.1" targetFramework="net45" />
+  <package id="WpfAnimatedGif" version="1.4.12" targetFramework="net45" />
 </packages>
