--- a/ModelExample/ModelExample.csproj
+++ b/ModelExample/ModelExample.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hatzap\Hatzap.csproj">
