--- a/Hatzap Editor/Hatzap Editor.csproj
+++ b/Hatzap Editor/Hatzap Editor.csproj
@@ -39,6 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\AssimpNet.3.3.1\lib\net45\AssimpNet.dll</HintPath>
     </Reference>
+    <Reference Include="Nvidia.TextureTools">
+      <HintPath>..\..\..\..\..\..\..\Program Files\NVIDIA Corporation\NVIDIA Texture Tools 2\src\project\vc8\Nvidia.TextureTools\bin\Release\Nvidia.TextureTools.dll</HintPath>
+    </Reference>
     <Reference Include="OpenTK.GLControl">
       <HintPath>..\OpenTK\Binaries\OpenTK\Debug\OpenTK.GLControl.dll</HintPath>
     </Reference>
@@ -68,20 +71,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="BackgroundJobWindow.xaml.cs">
-      <DependentUpon>BackgroundJobWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="ContentProcessors\Mesh\AssimpConvertor.cs" />
     <Compile Include="ContentProcessors\Textures\BitmapConvertor.cs" />
+    <Compile Include="Projects\IPackageItem.cs" />
+    <Compile Include="Projects\PackageProxyClass.cs" />
     <Compile Include="Renderables\RenderableAsset.cs" />
     <Compile Include="Renderables\RenderableTexture.cs" />
     <Compile Include="TextureSettingsWindow.xaml.cs">
       <DependentUpon>TextureSettingsWindow.xaml</DependentUpon>
     </Compile>
-    <Page Include="BackgroundJobWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -156,6 +154,26 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="EditorAssets\loading.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="cudart64_30_14.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="jpeg62.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="libpng12.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="libtiff3.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="nvtt.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="zlib1.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AssimpNet.3.3.1\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.3.3.1\build\AssimpNet.targets')" />
