--- a/HatzapTests/HatzapTests.csproj
+++ b/HatzapTests/HatzapTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AssetManagerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hatzap\Hatzap.csproj">
