Re-added opentk and implemented simple FXAA in Framebuffer Example

--- a/InstancingExample/InstancingExample.csproj
+++ b/InstancingExample/InstancingExample.csproj
@@ -49,6 +49,10 @@
       <Project>{9dbe6731-9baa-4eb6-a5cb-10d7cc10acbc}</Project>
       <Name>Hatzap</Name>
     </ProjectReference>
+    <ProjectReference Include="..\opentk\Source\OpenTK\OpenTK.csproj">
+      <Project>{a37a7e14-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
