--- a/FramebufferExample/FramebufferExample.csproj
+++ b/FramebufferExample/FramebufferExample.csproj
@@ -40,11 +40,17 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hatzap\Hatzap.csproj">
       <Project>{9dbe6731-9baa-4eb6-a5cb-10d7cc10acbc}</Project>
       <Name>Hatzap</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\opentk\Source\OpenTK\OpenTK.csproj">
+      <Project>{a37a7e14-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
