--- a/HelloTriangle/HelloTriangle.csproj
+++ b/HelloTriangle/HelloTriangle.csproj
@@ -42,6 +42,10 @@
       <Project>{9dbe6731-9baa-4eb6-a5cb-10d7cc10acbc}</Project>
       <Name>Hatzap</Name>
     </ProjectReference>
+    <ProjectReference Include="..\opentk\Source\OpenTK\OpenTK.csproj">
+      <Project>{a37a7e14-0000-0000-0000-000000000000}</Project>
+      <Name>OpenTK</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloTriangleWindow.cs" />
